--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,40 @@
-body {
+#home{
   background-image: url(/images/backery.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  height: 70vh;
+
 }
 
-.container h1 {
+#home h1 {
   font-family: 'Big Shoulders Text', cursive;
   font-family: 'Pacifico', cursive;
   font-size: 100px;
-  color: #ffffff;
+  color: orange;
   margin-left: -70px;
   padding-top: 300px;
+  text-align: center;
 }
 
-.container h4 {
+#home h4 {
   font-family: 'Big Shoulders Text', cursive;
   font-family: 'Pacifico', cursive;
   color: #ffffff;
+  text-align: center;
+  font-size: 70px;
 
 }
 p{
   color: white;
   font-size:101px;
+}
+#aboutus h2{
+  text-align: center;
+
+}
+#aboutus img{
+  border-radius: 100%;
+  margin-left: 40%;
 }
