--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   background-image: url(/images/backery.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-position: center;
   height: 70vh;
 
@@ -21,7 +21,7 @@
 #home h4 {
   font-family: 'Big Shoulders Text', cursive;
   font-family: 'Pacifico', cursive;
-  color: #ffffff;
+  color:khaki;
   text-align: center;
   font-size: 70px;
 
@@ -30,11 +30,27 @@ p{
   color: white;
   font-size:101px;
 }
+#aboutus{
+  background-attachment: fixed;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 #aboutus h2{
   text-align: center;
+  color:black;
 
 }
 #aboutus img{
-  border-radius: 100%;
-  margin-left: 40%;
+  /* border-radius: 100%; */
+  margin-left: 20%;
+}
+#aboutus h3{
+  text-align: center;
+  color:black;
+}
+#aboutus p{
+  text-align: center;
+  color: black;
+  font-size: 20px;
 }
