Added js and css files for the contacts.html file.

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/images/backgr);
+  background-image: url(/images/);
   background-size: cover;
   background-repeat: no-repeat;
 }
