--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/images/);
+  background-image: url(/images/back.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
