--- a/css/contacts.css
+++ b/css/contacts.css
@@ -84,3 +84,22 @@ ul {
     border: 1px solid #999;
     background: transparent;
 }
+.input-group input.margin2 {
+    margin-right: 2%;
+}
+.input-group1 input[type="submit"] {
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    outline: none;
+    box-sizing: border-box;
+	cursor: pointer;
+    color: #eee;
+    background: #333;
+    padding: 10px;
+    border: none;
+    width: 25%;
+    margin: 10px 0 0 auto;
+	transition: all 0.5s ease-in;
+}
