--- a/css/contacts.css
+++ b/css/contacts.css
@@ -103,3 +103,7 @@ ul {
     margin: 10px 0 0 auto;
 	transition: all 0.5s ease-in;
 }
+.input-group1 input[type="submit"]:hover {
+    background: #2196F3;
+	transition: all 0.5s ease-in;
+}
