--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: rgba(51, 51, 51, 0.534);
   /* position: fixed; */
   /* background-color: transparent; */
   /* margin-left: 35%; */
@@ -24,6 +24,8 @@ li {
 }
 ul li a{
   list-style-type: none;
+  text-align: center;
+
 }
 
 li a {
@@ -35,12 +37,12 @@ li a {
   list-style-type: none;
   font-weight: bolder;
   font-size: 30px;
+  font-family: 'Pacifico', cursive; 
+
 }
 
 li a:hover {
   background-color:orange;
-  
-
 }
 .button {
   padding: 15px 25px;
