--- a/css/contacts.css
+++ b/css/contacts.css
@@ -5,18 +5,22 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
-    
+    background-color: rgba(51, 51, 51, 0.534);
     /* position: fixed; */
     /* background-color: transparent; */
     /* margin-left: 35%; */
+  
   }
+  
   li {
     float: right;
   }
   ul li a{
     list-style-type: none;
+    text-align: center;
+  
   }
+  
   li a {
     display: block;
     color: white;
@@ -26,7 +30,10 @@ ul {
     list-style-type: none;
     font-weight: bolder;
     font-size: 30px;
+    font-family: 'Pacifico', cursive; 
+  
   }
+  
   li a:hover {
     background-color:orange;
   }
