--- a/css/menu.css
+++ b/css/menu.css
@@ -44,6 +44,7 @@ li a:hover {
   font-family: 'Pacifico', cursive; 
   text-align: center;
   padding: 20px;
+
 }
 
 .cakes {
@@ -53,10 +54,31 @@ li a:hover {
   font-family: 'Pacifico', cursive; 
   text-align: center;
   padding-bottom: 30px;
+  font-size: xx-large;
 
 }
 .cakes img {
   padding-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 35%;
 }
+
+.cakes:hover .content {
+  transform: scaleY(1);
+  border-radius: 35%;
+ 
+}
+.content {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  background: rgba(0, 0, 0, 0.521);
+  transform: scaleY(0);
+  transition: transform .5s;
+  color: #ffffff;
+}
+
+
