--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
-#home{
+ #home{
   background-image: url(/images/backery.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-attachment: fixed; */
+   background-attachment: fixed; 
   background-position: center;
   height: 100vh;
 
-}
+} 
 ul {
   list-style-type: none;
   margin: 0;
