--- a/css/menu.css
+++ b/css/menu.css
@@ -64,12 +64,34 @@ li a:hover {
   border-radius: 35%;
 }
 
-.cakes:hover .content {
-  transform: scaleY(1);
-  border-radius: 35%;
- 
+.cakes:hover img {
+  opacity: 0.7;
 }
+
+.cakes:hover .content {
+  opacity: 1;
+  /* transform: scaleY(1);
+  border-radius: 35%;
+  */
+}
+
 .content {
+  background-color: rgba(8, 8, 8, 0.281);
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: 'Pacifico', cursive; 
+
+}
+/* .content {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -79,6 +101,6 @@ li a:hover {
   transform: scaleY(0);
   transition: transform .5s;
   color: #ffffff;
-}
+} */
 
 
