--- a/css/contacts.css
+++ b/css/contacts.css
@@ -167,7 +167,7 @@ textarea {
     margin-bottom: 2rem;
     margin-top: 2rem;
 }
-@media(max-width: 900px){
+/* @media(max-width: 900px){
 	.contact address p, .contact address p a {
 		font-size: 15px;
 		letter-spacing: 1px;
@@ -179,4 +179,33 @@ textarea {
         .formcontact{
             width: 85%;
             left: 7.5%;
-        }}
+        }} */
+
+        @media(max-width:425px){
+            .formcontact{
+              position: relative;
+              left:0%;
+              width:100%;
+              margin-right: 0;
+              margin-left: 0;
+            }
+            .form {
+              flex-basis: 100% ;
+              -webkit-flex-basis: 100% ;
+              padding: 0em 2em;
+              font-size: 1rem;
+              font-weight: 400;
+              line-height: 2.5;
+              color: #212529;
+              text-align: left;
+            }
+            .input-group input.margin2 {
+              margin-right: 0%;
+            }
+            .form .input-group input[type="text"], .input-group input[type="email"] {
+              width: 100%;
+            }
+            #gmap_canvas {
+              margin-bottom: 0;
+            }
+          }
