Added js to accept input and get prices corresponding to that value.

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,7 @@
 body {
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #291c0f;
+  background-color: #271b048c;
 }
 
 body h4 {
