--- a/css/styles.css
+++ b/css/styles.css
@@ -74,9 +74,8 @@ h4{
   font-family: 'Satisfy', cursive;
 }
 #home h1 {
-  font-family:fantasy;
-  font-family: fantasy;
-  font-size: 100px;
+  font-family: 'Great Vibes', cursive;  
+  font-size: 150px;
   color:orange;
   margin-left: -70px;
   padding-top: 300px;
