--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
- #home{
+body {
+  background-color: #836853ff;
+}
+#home{
   background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(/images/home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
    /* background-attachment: fixed;  */
   background-position: center;
   height: 100vh;
+  
   
 
 } 
@@ -13,7 +17,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: rgba(51, 51, 51, 0.534);
+  /* background-color: rgba(51, 51, 51, 0.534); */
   
 
   /* position: fixed; */
@@ -74,9 +78,8 @@ h4{
   font-family: 'Satisfy', cursive;
 }
 #home h1 {
-  font-family:fantasy;
-  font-family: fantasy;
-  font-size: 100px;
+  font-family: 'Great Vibes', cursive;
+  font-size: 130px;
   color:orange;
   margin-left: -70px;
   padding-top: 300px;
@@ -84,11 +87,10 @@ h4{
 }
 
 #home h4 {
-  font-family: 'Big Shoulders Text', cursive;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Shadows Into Light', cursive;
   color:white;
   text-align: center;
-  font-size: 80px;
+  font-size: 50px;
 
 }
 p{
