--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   background-color: #836853ff;
 }
 #home{
-  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(/images/home.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(../images/home.jpg);
   background-size: cover;
   background-repeat: no-repeat;
    /* background-attachment: fixed;  */
